ip우회 문제, 배포 문제 남았음

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,16 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
 }
+@keyframes slow-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-slow-spin {
+  animation: slow-spin 3s linear infinite; /* 3초에 한 바퀴 회전 */
+}
+
 
 canvas {
   position: absolute;
